# pyback_sample_project

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: orders.py  schemas.py
app/db/: __init__.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 4256a2df4f72_create_orders_tables.py
app/messaging/: producer.py
app/metrics/: prometheus.py
app/services/: orders.py
consumer/: main.py
consumer/core/: config.py
consumer/db/: session.py
consumer/messaging/: consumer.py
consumer/services/: order_processor.py
docker/: api.Dockerfile  consumer.Dockerfile
shared/db/: models.py
tests/: conftest.py  factories.py
tests/integration/: test_api.py  test_consumer.py  test_database.py
tests/unit/: test_config.py  test_db_session.py  test_imports.py  test_main.py  test_models.py  test_order_processor.py  test_order_service.py  test_producer.py  test_prometheus.py  test_schemas.py
